Updated broken tests for inference extension

--- a/c_extensions/inferrer/test/Makefile
+++ b/c_extensions/inferrer/test/Makefile
@@ -2,8 +2,8 @@ CC = g++
 GTESTDIR = gtest
 TESTS = $(wildcard test_*.cc)
 OBJECTS = $(patsubst %.cc, %.o, $(wildcard *.cc))
-CFLAGS = -I$(GTESTDIR)/include -std=c++0x
-LIBS = $(GTESTDIR)/libgtest.a ../../hiredis/libhiredis.a -lpthread
+CFLAGS = -I$(GTESTDIR)/include -std=c++0x -g
+LIBS = $(GTESTDIR)/build/libgtest_main.a $(GTESTDIR)/build/libgtest.a -lhiredis -lpthread
 
 %.o: %.cc $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@
